# libintl

./: .gitignore  CMakeLists.txt  bindtextdom.c  dcigettext.c  gettextP.h  intl-compat.c  libgnuintl.h.in  localename.c  printf.c  relocatable.h  test_libintl.c
.github/workflows/: build.yml
tests/: CMakeLists.txt
