cmake_minimum_required(VERSION 3.15)

project(libintl VERSION 0.14.4 LANGUAGES C)

include(GNUInstallDirs)
include(CheckIncludeFile)
include(CheckSymbolExists)
include(CheckFunctionExists)

option(LIBINTL_WITH_ICONV "Link with iconv/libiconv if available" ON)

check_include_file("stddef.h" HAVE_STDDEF_H)
check_include_file("stdlib.h" HAVE_STDLIB_H)
check_include_file("string.h" HAVE_STRING_H)
check_include_file("unistd.h" HAVE_UNISTD_H)
check_include_file("sys/mman.h" HAVE_SYS_MMAN_H)
check_include_file("langinfo.h" HAVE_LANGINFO_H)
check_include_file("stdint.h" HAVE_STDINT_H)
check_include_file("inttypes.h" HAVE_INTTYPES_H)

check_symbol_exists(CODESET "langinfo.h" HAVE_LANGINFO_CODESET)
check_symbol_exists(getc_unlocked "stdio.h" HAVE_DECL_GETC_UNLOCKED)
check_symbol_exists(_snprintf "stdio.h" HAVE_DECL__SNPRINTF)
check_symbol_exists(_snwprintf "wchar.h" HAVE_DECL__SNWPRINTF)

check_function_exists(setlocale HAVE_SETLOCALE)
check_function_exists(mmap HAVE_MMAP)

set(HAVE_POSIX_PRINTF 0)
set(HAVE_ASPRINTF 0)
set(HAVE_WCHAR_T 1)
set(HAVE_WINT_T 1)
set(HAVE_INTMAX_T 1)
set(HAVE_LONG_LONG 1)
set(HAVE_LONG_DOUBLE 1)

if(MSVC)
  set(HAVE_SNPRINTF 1)
  set(HAVE_FWPRINTF 1)
  set(HAVE_DECL__SNPRINTF 1)
  set(HAVE_DECL__SNWPRINTF 1)
else()
  check_function_exists(snprintf HAVE_SNPRINTF)
  check_function_exists(fwprintf HAVE_FWPRINTF)
endif()

set(HAVE_ICONV 0)
set(DEPENDS_ON_LIBICONV 0)
set(_intl_iconv_include_dirs "")
set(_intl_iconv_libraries "")

if(LIBINTL_WITH_ICONV)
  find_package(Iconv QUIET)
  if(Iconv_FOUND)
    set(HAVE_ICONV 1)
    set(DEPENDS_ON_LIBICONV 1)
    if(TARGET Iconv::Iconv)
      list(APPEND _intl_iconv_libraries Iconv::Iconv)
    else()
      if(DEFINED Iconv_LIBRARIES)
        list(APPEND _intl_iconv_libraries ${Iconv_LIBRARIES})
      endif()
      if(DEFINED Iconv_INCLUDE_DIRS)
        list(APPEND _intl_iconv_include_dirs ${Iconv_INCLUDE_DIRS})
      endif()
    endif()
  else()
    find_path(ICONV_INCLUDE_DIR iconv.h)
    find_library(ICONV_LIBRARY NAMES iconv libiconv)
    if(ICONV_INCLUDE_DIR AND ICONV_LIBRARY)
      set(HAVE_ICONV 1)
      set(DEPENDS_ON_LIBICONV 1)
      list(APPEND _intl_iconv_include_dirs ${ICONV_INCLUDE_DIR})
      list(APPEND _intl_iconv_libraries ${ICONV_LIBRARY})
    endif()
  endif()
endif()

if(LIBINTL_WITH_ICONV AND NOT HAVE_ICONV)
  message(WARNING "未找到 iconv/libiconv，将以不启用 iconv 的方式构建（HAVE_ICONV=0）。如需启用，请安装 libiconv 或设置 ICONV_INCLUDE_DIR / ICONV_LIBRARY。")
endif()

set(_config_h_in "${CMAKE_CURRENT_BINARY_DIR}/config.h.in")
file(WRITE "${_config_h_in}" "/* Generated by CMake. */\n")
file(APPEND "${_config_h_in}" "#define HAVE_POSIX_PRINTF ${HAVE_POSIX_PRINTF}\n")
file(APPEND "${_config_h_in}" "#define HAVE_ASPRINTF ${HAVE_ASPRINTF}\n")
file(APPEND "${_config_h_in}" "#define HAVE_WCHAR_T ${HAVE_WCHAR_T}\n")
file(APPEND "${_config_h_in}" "#define HAVE_WINT_T ${HAVE_WINT_T}\n")
file(APPEND "${_config_h_in}" "#define HAVE_INTMAX_T ${HAVE_INTMAX_T}\n")
file(APPEND "${_config_h_in}" "#define HAVE_LONG_LONG ${HAVE_LONG_LONG}\n")
file(APPEND "${_config_h_in}" "#define HAVE_LONG_DOUBLE ${HAVE_LONG_DOUBLE}\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_STDDEF_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_STDLIB_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_STRING_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_UNISTD_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_SYS_MMAN_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_LANGINFO_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_STDINT_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_INTTYPES_H 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_LANGINFO_CODESET 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_DECL_GETC_UNLOCKED 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_DECL__SNPRINTF 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_DECL__SNWPRINTF 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_SETLOCALE 1\n")
file(APPEND "${_config_h_in}" "#cmakedefine HAVE_MMAP 1\n")
file(APPEND "${_config_h_in}" "#define HAVE_SNPRINTF ${HAVE_SNPRINTF}\n")
file(APPEND "${_config_h_in}" "#define HAVE_FWPRINTF ${HAVE_FWPRINTF}\n")
file(APPEND "${_config_h_in}" "#define HAVE_ICONV ${HAVE_ICONV}\n")
configure_file("${_config_h_in}" "${CMAKE_CURRENT_BINARY_DIR}/config.h" @ONLY)

set(_relocate_h "${CMAKE_CURRENT_BINARY_DIR}/relocate.h")
file(WRITE "${_relocate_h}" "#ifndef _RELOCATE_H\n#define _RELOCATE_H\n\n#ifdef __cplusplus\nextern \"C\" {\n#endif\n\nconst char *libintl_relocate (const char *pathname);\n\nstatic __inline char *relocatex (const char *installdir, const char *pathname)\n{\n  (void) installdir;\n  return (char *) libintl_relocate (pathname);\n}\n\n#ifdef __cplusplus\n}\n#endif\n\n#endif\n")

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/libgnuintl.h.in" "${CMAKE_CURRENT_BINARY_DIR}/libgnuintl.h" COPYONLY)
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/libgnuintl.h.in" "${CMAKE_CURRENT_BINARY_DIR}/libintl.h" COPYONLY)

add_library(intl SHARED
  bindtextdom.c
  dcgettext.c
  dgettext.c
  gettext.c
  finddomain.c
  loadmsgcat.c
  localealias.c
  textdomain.c
  l10nflist.c
  explodename.c
  dcigettext.c
  dcngettext.c
  dngettext.c
  ngettext.c
  plural.c
  plural-exp.c
  localcharset.c
  relocatable.c
  langprefs.c
  localename.c
  log.c
  printf.c
  osdep.c
  intl-compat.c
)

set_target_properties(intl PROPERTIES
  OUTPUT_NAME intl
  POSITION_INDEPENDENT_CODE ON
)

target_include_directories(intl
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_include_directories(intl PRIVATE ${_intl_iconv_include_dirs})

target_compile_definitions(intl
  PRIVATE
    HAVE_CONFIG_H
    IN_LIBINTL
    IN_LIBRARY
    PIC
    NO_XMALLOC
    ENABLE_RELOCATABLE=1
    DEPENDS_ON_LIBCHARSET=0
    DEPENDS_ON_LIBINTL=0
    DEPENDS_ON_LIBICONV=${DEPENDS_ON_LIBICONV}
    set_relocation_prefix=libintl_set_relocation_prefix
    relocate=libintl_relocate
)

set(_intl_localedir "${CMAKE_INSTALL_FULL_DATAROOTDIR}/locale")
set(_intl_installdir "${CMAKE_INSTALL_FULL_BINDIR}")

target_compile_definitions(intl
  PRIVATE
    LOCALEDIR="${_intl_localedir}"
    LOCALE_ALIAS_PATH=""
    INSTALLDIR="${_intl_installdir}"
    INSTALLPREFIX="${CMAKE_INSTALL_PREFIX}"
)

if(MSVC)
  target_compile_definitions(intl PRIVATE BUILDING_LIBINTL BUILDING_DLL)
endif()

if(WIN32)
  target_compile_definitions(intl PRIVATE R_OK=4 HAVE_GETCWD=1 getcwd=_getcwd)
endif()

target_link_libraries(intl PRIVATE ${_intl_iconv_libraries})

install(TARGETS intl
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/libintl.h"
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
